[Win][Clang] Fix compilation warnings of MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=193029

Reviewed by Ross Kirsling.

* MiniBrowser/win/MiniBrowserWebHost.h: Removed unused m_oldFont
and m_URLBarFont. Reorder member variables to fix -Wreorder
warning.
* MiniBrowser/win/PageLoadTestClient.cpp:
(PageLoadTestClient::PageLoadTestClient): Reorder the member initializer list.
* MiniBrowser/win/PageLoadTestClient.h: Removed 'virtual' of
pageLoadStartedAtTime and pageLoadEndedAtTime. Removed unused
m_currentURLIndex.
* MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::WebKitBrowserWindow): Initialize
navigationClient with '{ }' to fix the missing field warning.
* MiniBrowser/win/WebKitLegacyBrowserWindow.cpp:
(initDocStruct): Changed the argument type docname to const.

Canonical link: https://commits.webkit.org/207692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239666 268f45cc-cd09-0410-ab3c-d52691b4dbfc