Tools/MiniBrowser/win/WebKitLegacyBrowserWindow.h
@@ -120,8 +120,6 @@ private:
 
     std::vector<IWebHistoryItemPtr> m_historyItems;
 
-    std::unique_ptr<PageLoadTestClient> m_pageLoadTestClient;
-
     IWebViewPtr m_webView;
     IWebViewPrivatePtr m_webViewPrivate;
 
@@ -144,4 +142,6 @@ private:
     HWND m_viewWnd { nullptr };
 
     bool m_useLayeredWebView;
+
+    std::unique_ptr<PageLoadTestClient> m_pageLoadTestClient;
 };
